[project]
name = "payment-with-human-aproval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
    "langgraph-sdk>=0.2.9",
    "paylink>=0.3.0",
]
